--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.1",
     "@formatjs/intl-localematcher": "^0.6.1",
     "@googlemaps/js-api-loader": "^1.16.10",
-    "@mui/icons-material": "^7.2.0",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
+    "@mui/system": "^7.3.1",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -27,7 +29,7 @@
     "@types/negotiator": "^0.6.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dplus_common_v1": "github:jepilyun/dplus_common_v1",
+    "dplus_common_v1": "^0.1.39",
     "lucide-react": "^0.536.0",
     "negotiator": "^1.0.0",
     "next": "^14.2.13",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^20.19.9",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
