--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,14 @@
   "trailingComma": "all",
   "useTabs": false,
   "arrowParens": "always",
-  "printWidth": 120
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "importOrder": [
+    "^react$", 
+    "^next", 
+    "<THIRD_PARTY_MODULES>", 
+    "^@/utils/(.*)$", 
+    "^[./]"
+  ],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
