--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write --config ./.prettierrc.json '**/*.ts'"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -27,9 +28,11 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@types/negotiator": "^0.6.4",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dplus_common_v1": "^0.1.85",
+    "dplus_common_v1": "^0.1.87",
     "lucide-react": "^0.536.0",
     "negotiator": "^1.0.0",
     "next": "^14.2.13",
@@ -42,6 +45,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^20.19.9",
     "@types/react": "^18.3.23",
