--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.80.0",
     "@types/negotiator": "^0.6.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dplus_common_v1": "^0.1.94",
+    "dplus_common_v1": "^0.1.99",
     "lucide-react": "^0.536.0",
     "negotiator": "^1.0.0",
     "next": "^14.2.13",
