--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@formatjs/intl-localematcher": "^0.6.1",
     "@googlemaps/js-api-loader": "^1.16.10",
     "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
-    "@mui/system": "^7.3.1",
+    "@mui/material": "^7.3.6",
+    "@mui/material-nextjs": "^7.3.6",
+    "@mui/system": "^7.3.6",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -37,10 +38,10 @@
     "dplus_common_v1": "^0.2.25",
     "lucide-react": "^0.536.0",
     "negotiator": "^1.0.0",
-    "next": "^15.3.8",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
-    "react": "^19.1.4",
-    "react-dom": "^19.1.4",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
@@ -50,8 +51,8 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^20.19.9",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9.32.0",
     "eslint-config-next": "^15.3.8",
     "eslint-config-prettier": "^10.1.8",
