--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns-tz": "^3.2.0",
     "dplus_common_v1": "^0.2.41",
     "lucide-react": "^0.536.0",
     "negotiator": "^1.0.0",
