--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/negotiator": "^0.6.4",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.13.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns-tz": "^3.2.0",
